k8s-minio.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: "minio/minio:RELEASE.2021-04-06T23-11-00Z"
          args: ["server", "/export"]
          ports:
            - name: web
              containerPort: 9000
          readinessProbe:
            httpGet:
              path: /minio/health/ready
              port: 9000
            initialDelaySeconds: 20
            periodSeconds: 20
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 20
          volumeMounts:
            - mountPath: /export
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
spec:
  selector:
    app: minio
  ports:
    - protocol: TCP
      port: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: minio-host
  labels:
    app: minio
spec:
  selector:
    app: minio
  type: NodePort
  ports:
    - protocol: TCP
      port: 9000
      nodePort: 30090
