k8s.minio.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: minio
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: "minio/minio:RELEASE.2017-04-29T00-40-27Z"
        args: ["server", "/export"]
        ports:
        - containerPort: 9000
        volumeMounts:
        - mountPath: /export
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
spec:
  selector:
    app: minio
  ports:
  - protocol: TCP
    port: 9000
