k8s-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  annotations:
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1200"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1200"
    nginx.ingress.kubernetes.io/proxy-body-size: 4096M
spec:
  ingressClassName: "nginx"
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web
                port:
                  number: 8000
    - host: files.localhost
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: minio-host
                port:
                  number: 9000
    - host: "*.web.localhost"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web-proxy
                port:
                  number: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-debug
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: debug-auth
    nginx.ingress.kubernetes.io/auth-realm: "Restricted"
spec:
  ingressClassName: "nginx"
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: /data
            backend:
              service:
                name: web
                port:
                  number: 8000
