k8s-monitor.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.14.0
          imagePullPolicy: IfNotPresent
          args:
            - "--config.file=/etc/k8s-prom/prometheus.yml"
            - "--storage.tsdb.path=/prometheus"
            - "--web.console.libraries=/usr/share/prometheus/console_libraries"
            - "--web.console.templates=/usr/share/prometheus/consoles"
          volumeMounts:
            - name: k8s-prom
              mountPath: /etc/k8s-prom
            - name: data
              mountPath: /prometheus
          ports:
            - containerPort: 9090
      volumes:
        - name: k8s-prom
          configMap:
            name: k8s-prom
        - name: data
          persistentVolumeClaim:
            claimName: prometheus-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:6.4.4
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: data
              mountPath: /var/lib/grafana
          ports:
            - containerPort: 3000
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: grafana-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: web-scrape
  labels:
    app: web
spec:
  selector:
    app: web
  clusterIP: "None"
  ports:
    - protocol: TCP
      port: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-scrape
  labels:
    app: proxy
spec:
  selector:
    app: proxy
  clusterIP: "None"
  ports:
    - protocol: TCP
      port: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-grafana
spec:
  ingressClassName: "nginx"
  rules:
    - host: grafana.server.reprozip.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: grafana
                port:
                  number: 3000
